--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="MobileOptimized" content="320">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--CSS-->
-        
+        <link href="assets/css/main.css" rel="stylesheet">
         <!--SEO-->
         <meta name="author" content="André Rodrigues">
         <meta name="description" content="Veja como é simples escrever uma folha de estilo de forma que possa crescer saudável">
@@ -19,27 +19,42 @@
     </head>
     <body>
         <main class="main" role="main">
-            <header class="header_top">
-                <div class="logo">
-
-                </div><!--/logo-->
-                <ul class="links" role="navigation">
-                    <li><a href="" title="O SITE"><i></i> O SITE</a></li>
-                    <li><a href="" title="CONHEÇA O DEV"><i></i> CONHEÇA O DEV</a></li>
-                    <li><a href="" title="CONFIGURAÇÕES TEMA"><i></i></a></li>
-                </ul><!--/Links-->
-            </header><!--/header-->
-            <section class="banner">
-                <article id="top">
-                    <div class="container">
-                        <div class="col-12">
-                            <h1>CSS-WELL-DONE</h1>
-                            <h2>ESCREVENDO CSS DE MANEIRA LEGAL</h2>
+            <section class="contents">
+                <header class="header_top">
+                   <div class="container_fluid">
+                    <div class="logo">
+                        <h2>{ CWD }</h2>
+                    </div><!--/logo-->
+                    <button class="responsive" id="responsive">
+                        <i></i>
+                    </button><!--/responsive-->
+                    <ul class="links" role="navigation">
+                        <a href=""><i></i> HOME</a>
+                        <a href=""><i></i> SOBRE O SITE</a>
+                        <a href="" title="CONFIGURAÇÕES DE TEMA"><i></i></a>
+                    </ul><!--/Links-->
+                   </div><!--/container_fluid-->
+                </header><!--/header-->
+                <section class="banner">
+                    <article id="top">
+                        <div class="container">
+                            <div class="col-12">
+                                <h1>CSS-WELL-DONE</h1>
+                                <h2>ESCREVENDO CSS DE MANEIRA LEGAL</h2>
+                            </div>
                         </div>
-                    </div>
-                </article>
-            </section><!--/BANNER-->
-
+                    </article>
+                </section><!--/BANNER-->
+                <section id="o-site">
+                    <article>
+                        <div class="container">
+                            <div class="col-12">
+                                
+                            </div>
+                        </div>
+                    </article>
+                </section><!--/o-site-->
+            </section><!--/contents-->
         </main><!--/main-->
     </body>
 </html>
