--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     </head>
     <body>
         <main class="main" role="main">
+            <nav class="navbar" role="navigation">
+                <ul class="links">
+
+                </ul>
+            </nav><!--/navbar-->
             <section class="contents">
                 <header class="header_top">
                    <div class="container_fluid">
