--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <main class="main" role="main">
             <nav class="navbar" role="navigation">
                 <ul class="links">
-                    <a href="#sobre_css">SOBRE ESCREVER UM CSS</a>
+                    <a href="#sobre-css">SOBRE ESCREVER UM CSS</a>
                     <a href="">PARE E PENSE!</a>
                     <a href="">UMA FOLHA POLUÍDA</a>
                     <a href="">UMA FOLHA SAUDÁVEL</a>
@@ -69,7 +69,8 @@
                                         </figure>
                                         <div class="text">
                                             <p>
-                                                    Aprender CSS não é complicado! Mas escrever folhas que crescem com facilidade de suporte e que o navegador consegue ler de forma rápida é complicado. Quando falamos de CSS estamos falando de um monstrinho duas caras que no início mostra ser bem legal, só que no passar do tempo ele começa a aprontar com a gente. Vários desenvolvedores passam aperto com folhas de estilo pelo fato que não conseguem controlar seu crescimento e reaproveitar seus componentes em outros projetos. Se você está pensando que o reaproveitar que falei é sobre ser preguiçoso e não codar outra vez, calma aí que não é assim! Bom talvez tenha um pouquinho a ver com preguiça srsr.. A questão é que nem sempre você terá tempo de escrever tudo novamente em outros projetos mesmo aqueles com identidade diferentes onde tenha que montar digamos que 80% dos componentes do zero.       
+                                                    Aprender CSS não é complicado! Mas escrever folhas que crescem com facilidade de suporte e que o navegador consegue ler de forma rápida é complicado. Quando falamos de CSS estamos falando de um monstrinho duas caras que no início mostra ser bem legal, só que no passar do tempo ele começa a aprontar com a gente. Vários desenvolvedores passam aperto com folhas de estilo pelo fato que não conseguem controlar seu crescimento e reaproveitar seus componentes em outros projetos. Se você está pensando que o reaproveitar que falei é sobre ser preguiçoso e não codar outra vez, calma aí que não é assim! Bom talvez tenha um pouquinho a ver com preguiça srsr.. A questão é que nem sempre você terá tempo de escrever tudo novamente em outros projetos mesmo aqueles com identidade diferentes onde tenha que montar digamos que 80% dos componentes do zero.  
+                                                    Ao longo do meu tempo como desenvolvedor front-end venho buscado cada vez mais melhorar minhas folhas de estilo. Como já havia dito antes escrever uma folha de estilo de qualidade é um grande desafio, mas também não é uma tarefa complicada! Todo desenvolvedor já foi um pequeno gafanhoto (apesar que nunca paramos de crescer nessa profissão), garanto que um dia você já escreveu um CSS junto ao HTML porque no arquivo externo não estava pegando a propriedade ou então sem querer escreveu duas vezes propriedades que não haviam necessidade de se repetir, calma não se preocupe não vou te xingar e nem tacar pedra em você amiguinho, agora espero que a partir daqui você já tenha uma visão diferente de como escrever uma folha de estilo.                                                   
                                             </p>
                                         </div>
                                     </div>
