--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <footer class="footer">
                     <div class="container">
                         <div class="col-12">
-                            <p>&copy; Todos direitos reservados | Desenvolvimento: André ROdrigues (Xor)</p>
+                            <p>&copy; Todos direitos reservados | Desenvolvimento: André Rodrigues (Xor)</p>
                         </div>
                     </div>
                 </footer>
