Commit da tarde

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <button class="bt bt-clean" title="Botão para tema escuro">
                                 TEMA CLEAN
                             </button>
-                            <button class="bt bt-dark" title="Botão para tema escuro">
+                            <button class="bt bt-dark" title="Botão para tema escuro" id="bt-escuro">
                                 TEMA DARK
                             </button>
                         </div>
@@ -39,12 +39,14 @@
                         <a href="#pare-pense">PARE E PENSE!</a>
                         <a href="#errada">UMA FOLHA POLUÍDA</a>
                         <a href="#certa">UMA FOLHA SAUDÁVEL</a>
-                        <a href="">EXEMPLOS DE COMPONENTES</a>
-                        <a href="">STYLUS SAUDÁVEL</a>
+                        <a class="bt bt-pink" href="componentsCSS.html">CSS COMPONENTES</a>
+                        <a href="">USANDO STYLUS</a>
+                        <a href="">ESCREVENDO BEM NO STYLUS</a>
+                        <a href="componentsStylus.html" class="bt bt-teal">STYLUS COMPONENTS</a>
                     </ul><!--/links-->
                 </div><!--/content-nav-->
             </nav><!--/navbar-->
-            <section class="contents">
+            <section class="contents" id="cor_escura">
                 <header class="header_top">
                    <div class="container_fluid">
                     <div class="logo">
